# zk2p

./: .gitignore  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CURRENT_STATUS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEVNET_MVP_STATUS.md  MVP_PROGRESS_SUMMARY.md  POST_CLEANUP_VERIFICATION.md  QUICK_START.md  README.md  READY_FOR_DEVNET.md  ROBUST_ENGINE_ROADMAP.md  SESSION_SUMMARY.md  SETUP_AND_DEPLOYMENT_COMPLETE.md  WHY_SOLANA.md  package-lock.json  package.json  phase-2-educational-implementation.plan.md  tore workflow_ANOMI.md  workflow_ANOMI.md
anomi-zk-p/: REQUIREMENTS.md
anomi-zk-prototype/: .gitignore  ARCHITECTURE_DIAGRAM.md  Anchor.toml  BUILD_AND_TEST.md  DEVELOPMENT.md  DEVNET_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_PROPOSAL.md  PHASE1_UI_COMPLETE.md  PHASE_0.5_COMPLETE.md  README.md  SETUP_GUIDE.md  SETUP_ONCHAIN_TESTING.md  UI_SIMPLIFIED_COMPLETE.md  WSL_COMMANDS.txt  package-lock.json  package.json  rebuild-deploy.sh  tsconfig.json
anomi-zk-prototype/demo-ui/: README.md  START_SERVER_GUIDE.md  TEST_UI.md  UI_FEATURES_GUIDE.md  UI_TESTING_GUIDE.md  config-loader.js  config.devnet.json  config.json  config.mainnet.json  index.html  market.json  onchain-transactions.js  server.py  start-server.bat  start-server.ps1
anomi-zk-prototype/docs/: 1TO1_MATCHING.md  ARCHITECTURE.md  COMPONENT_ISOLATION_TESTING.md  CRITBIT_IMPLEMENTATION.md  DEPLOYMENT.md  KNOWN_ISSUES.md  MATCHING_ENGINE.md  P2P_QUICKSTART.md  P2P_TESTING.md  PRODUCTION_TESTING.md  SETUP.md  TESTING.md
anomi-zk-prototype/programs/market/: Cargo.toml
anomi-zk-prototype/programs/market/src/: critbit.rs  error.rs  lib.rs  order.rs  order_book.rs
anomi-zk-prototype/programs/order-processor/: Cargo.toml
anomi-zk-prototype/programs/order-processor/src/: lib.rs
anomi-zk-prototype/scripts/: DEPLOYMENT_README.md  E2E_TEST_GUIDE.md  README.md  check-ids.sh  create-e2e-tokens.ts  create-new-token.ts  create-test-token.ps1  deploy-devnet.sh  devnet-config.json  fetch-orderbook.ts  fix-program-ids.sh  init-devnet.ts  place-order-cli.ts  prepare-devnet.sh  (+6 more)
docs/: INTRODUCTION.md
zk-stuff/: .gitignore  README.md  circuit.circom  compile_circuit.ps1  compile_circuit.sh  email-parser.js  package.json  proof-generator.js  test-email-verification.js
zk2p/anomi/programs/anomi/: Cargo.toml
zk2p/anomi/programs/anomi/src/: lib.rs
(+48 files in other folders)
