[package]
name = "market"
version = "0.1.0"
description = "Market Program - Stub for matching engine that creates MatchedOrder events"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
order-store = { path = "../order-store", features = ["cpi"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
