[package]
name = "anomi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anomi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# --- CRITICAL CONFIGURATION: LOCAL PATH DEPENDENCY ---
# OpenBook V2 program dependency for CPI calls - temporarily commented for initial testing
# openbook-v2 = { path = "/home/zan_yder/serum-OpenBook-prototype/openbook-v2/programs/openbook-v2", features = ["cpi"] }

# --- DEPENDENCY CONFLICT RESOLUTION ---
# Patch section removed to fix IDL generation issues
# Will be re-added when enabling full OpenBook V2 integration
